# lykos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  gendoc.py  heartbeat.py  pyproject.toml  wolfbot.py
.github/workflows/: ci.yml  wiki.yml
docs/: README.md
docs/source/: api.rst  conf.py  index.rst
docs/tutorials/: tutorial.md
frontend/: Dockerfile  app.py  pyproject.toml
frontend/templates/: index.html
hooks/: __init__.py
oyoyo/: client.py  ircevents.py  parse.py
src/: __init__.py  cats.py  channels.py  config.py  containers.py  context.py  decorators.py  dispatcher.py  events.py  functions.py  game_stats.py  gamecmds.py  gamejoin.py  gamestate.py  handler.py  hooks.py  lineparse.py  locations.py  logger.py  match.py  pregame.py  random.py  reaper.py  relay.py  trans.py  users.py  votes.py  warnings.py  wolfgame.py
src/db/: __init__.py
src/debug/: __init__.py  decorators.py  dict.py  history.py  set.py
src/gamemodes/: __init__.py  aleatoire.py  alpha.py  boreal.py  charming.py  classic.py  default.py  drunkfire.py  evilvillage.py  foolish.py  guardian.py  kaboom.py  lycan.py  mad.py  maelstrom.py  masquerade.py  mudkip.py  noreveal.py  pactbreaker.py  random.py  rapidfire.py  roles.py  sleepy.py  valentines.py
src/messages/: __init__.py  _messages.py  formatter.py  lexer.py  listener.py  message.py  message_lexer.py  message_parser.py  message_parserListener.py  parser.py
src/roles/: __init__.py  _skel.py  alphawolf.py  amnesiac.py  angel.py  assassin.py  augur.py  blessed.py  bodyguard.py  clone.py  crazedshaman.py  cultist.py  cultleader.py  cursed.py  demoniac.py  detective.py  doctor.py  doomsayer.py  dullahan.py  fallenangel.py  fool.py  gunner.py  hag.py  harlot.py  hunter.py  insomniac.py  investigator.py  jester.py  lycan.py  (+35 more)
test/: test_config_merge.py  test_dying.py  test_match.py  test_user_containers.py
(+18 files in other folders)
